--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,10 @@ node_modules/
 .env.production.local
 backend/.env
 backend/.env.*
+!backend/.env.example
 frontend/.env
 frontend/.env.*
+!frontend/.env.example
 
 # 构建输出
 dist/
