增强用户权限管理，添加客服角色及相关权限，更新订单和催货记录功能，优化前端组件以支持新角色，重构后端接口以处理权限验证和角色管理，更新数据库结构以支持多角色功能。

--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "build": "cd frontend && npm run build",
     "start": "cd backend && npm start"
   },
-  "keywords": ["跟单", "订单管理", "服装行业"],
+  "keywords": [
+    "跟单",
+    "订单管理",
+    "服装行业"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "@types/mocha": "^10.0.10",
     "concurrently": "^8.2.2"
   }
 }
-
