--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "jest",
+    "test:critical": "jest --runInBand __tests__/functional",
+    "test:all": "jest"
   },
   "dependencies": {
     "ali-oss": "^6.23.0",
@@ -21,13 +24,20 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@nestjs/testing": "^11.1.9",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^2.0.0",
     "@types/node": "^20.19.25",
     "@types/pg": "^8.10.9",
+    "@types/supertest": "^2.0.16",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
   }
