更新 .gitignore 文件，添加部署目录中的本地说明和命令清单文件，以优化版本控制和文档管理

--- a/.gitignore
+++ b/.gitignore
@@ -234,6 +234,10 @@ docs/private/
 *.需求*.md
 *.总结*.md
 
+# 部署目录中的本地说明/命令清单（不提交）
+deploy/*.txt
+deploy/一键执行命令清单.sh
+
 # ============================================
 # 架构文档（根据项目需要选择是否提交）
 # ============================================
