--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "test:all": "jest"
   },
   "dependencies": {
+    "@socket.io/redis-emitter": "^5.1.0",
     "ali-oss": "^6.23.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -24,8 +25,11 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "pg": "^8.11.3",
+    "redis": "^4.7.1",
     "reflect-metadata": "^0.2.2",
+    "socket.io": "^4.8.1",
     "typeorm": "^0.3.20",
+    "ws": "^8.18.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -39,6 +43,7 @@
     "@types/node": "^20.19.25",
     "@types/pg": "^8.10.9",
     "@types/supertest": "^2.0.16",
+    "@types/ws": "^8.18.1",
     "jest": "^29.7.0",
     "supertest": "^6.3.4",
     "ts-jest": "^29.2.5",
