--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.7",
     "element-plus": "^2.5.4",
     "pinia": "^2.1.7",
+    "socket.io-client": "^4.8.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
