添加 WebSocket 代理配置，优化前端 WebSocket 连接逻辑，支持重连机制和环境变量配置，增强连接稳定性和错误处理。

--- a/deploy/nginx/fangdu.conf
+++ b/deploy/nginx/fangdu.conf
@@ -85,6 +85,30 @@ server {
         proxy_read_timeout 60s;
     }
 
+    # WebSocket 代理（重要：必须在 /api 之后）
+    location /ws {
+        proxy_pass http://127.0.0.1:3007;
+        proxy_http_version 1.1;
+        
+        # WebSocket 必需的头部
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        
+        # 标准代理头部
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # WebSocket 超时设置（重要：比普通请求更长）
+        proxy_connect_timeout 7d;
+        proxy_send_timeout 7d;
+        proxy_read_timeout 7d;
+        
+        # 禁用缓冲（WebSocket 需要实时传输）
+        proxy_buffering off;
+    }
+
     # 文件上传大小限制
     client_max_body_size 50M;
 
