更新订单管理功能，增强客户公司关联逻辑，支持客户查看同一公司订单及跟进记录，优化通知和活动日志功能，添加实时推送支持，更新前端界面以改善用户体验。

--- a/.gitignore
+++ b/.gitignore
@@ -306,3 +306,7 @@ database.dbml
 REALTIME_SETUP.md
 NOTIFICATION_SETTINGS.md
 Grok.md
+database/migrations/README_COMPANY_MIGRATION.md
+deploy/websocket-debug.md
+database/README_ORDER_ACTIVITIES_MIGRATION.md
+docs/CUSTOMER_CODE_EXPLANATION.md
