--- a/deploy/nginx/fangdu.conf
+++ b/deploy/nginx/fangdu.conf
@@ -87,7 +87,8 @@ server {
 
     # WebSocket 代理（重要：必须在 /api 之后）
     location /ws {
-        proxy_pass http://127.0.0.1:3007;
+        # 注意：proxy_pass 必须包含 /ws 路径，以保留原始路径
+        proxy_pass http://127.0.0.1:3007/ws;
         proxy_http_version 1.1;
         
         # WebSocket 必需的头部
