更新后端控制器以支持分页参数解析，优化用户角色管理，增强配置管理功能，添加通用配置选项，更新前端界面以支持新功能。

--- a/.gitignore
+++ b/.gitignore
@@ -310,3 +310,5 @@ database/migrations/README_COMPANY_MIGRATION.md
 deploy/websocket-debug.md
 database/README_ORDER_ACTIVITIES_MIGRATION.md
 docs/CUSTOMER_CODE_EXPLANATION.md
+CURSOR_RULES.md
+CURSOR_SOUL.md
