更新后端数据库迁移脚本以支持自动查找并执行未执行的迁移文件，优化迁移执行过程并添加错误处理，增强前端通知和订单反馈功能，更新相关组件以支持订单编号反馈和用户交互。

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "migration:generate": "typeorm migration:generate src/migration/FullSnapshot -d src/data-source.ts",
-    "migration:run": "typeorm migration:run -d src/data-source.ts",
+    "migration:run": "tsx node_modules/typeorm/cli.js migration:run -d src/data-source.ts",
     "migration:run:fake": "typeorm migration:run --fake -d src/data-source.ts",
     "test": "jest",
     "test:critical": "jest --runInBand __tests__/functional",
