更新前端代码以支持客户公司缓存刷新，增强订单管理功能，添加客户公司类型定义，优化相关 API 调用，更新视图以改善用户交互体验。

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,4 @@ database/README_ORDER_ACTIVITIES_MIGRATION.md
 docs/CUSTOMER_CODE_EXPLANATION.md
 CURSOR_SOUL.md
 CURSOR_RULES.md
+docs/ADR-005-customer-company-cache-refresh.md
