增强用户列表视图，添加公司选择功能，支持公司搜索和快速创建新公司，优化公司缓存刷新逻辑，更新相关类型定义。

--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,6 @@ docs/CUSTOMER_CODE_EXPLANATION.md
 CURSOR_SOUL.md
 CURSOR_RULES.md
 docs/ADR-005-customer-company-cache-refresh.md
+frontend/src/views/users/UserList.vue
+docs/ADR-006-user-company-selector-enhancement.md
+docs/ADR-*.md
